[gd_scene load_steps=5 format=3 uid="uid://qpkuwd0c4rbn"]

[ext_resource type="Script" uid="uid://chqtm28viifet" path="res://Scripts/scrambled.gd" id="1_0jfle"]
[ext_resource type="Texture2D" uid="uid://dg8et5c0cxylc" path="res://MiniGameAssets/scrambled.webp" id="2_xju60"]
[ext_resource type="AudioStream" uid="uid://cot11mwo1k4ib" path="res://sounds/boss.mp3" id="3_xju60"]
[ext_resource type="Texture2D" uid="uid://cvr5onr70hr2y" path="res://MiniGameAssets/Hint.png" id="4_b00yp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0jfle")

[node name="OutputLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 415.0
offset_top = 200.0
offset_right = 676.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 34

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -27.0
offset_top = 37.0
offset_right = 1180.0
offset_bottom = 184.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 34
text = " It’s about building defenses around systems, 
protecting data, and making sure people don’t fall 
for scams or leaks."

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 476.0
offset_top = 524.0
offset_right = 651.0
offset_bottom = 591.0
text = "Submit"

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = -334.0
offset_top = -181.0
offset_right = 1510.0
offset_bottom = 933.0
mouse_filter = 2
texture = ExtResource("2_xju60")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xju60")
volume_db = -2.15

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = 384.0
offset_top = 190.0
offset_right = 740.0
offset_bottom = 313.0
mouse_filter = 2
texture = ExtResource("4_b00yp")
expand_mode = 1

[node name="ExitConfirmDialog" type="ConfirmationDialog" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 423.0
offset_right = 1067.0
offset_bottom = 463.0
theme_override_constants/separation = 16
alignment = 1

[node name="Button1" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button5" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button6" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button7" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button8" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button9" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button10" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button11" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button12" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button13" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShuffleButton" type="Button" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 528.0
offset_right = 215.0
offset_bottom = 579.0
text = "Shuffle"

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="confirmed" from="ExitConfirmDialog" to="." method="_on_exit_confirm_dialog_confirmed"]
[connection signal="pressed" from="ShuffleButton" to="." method="_on_shuffle_button_pressed"]
